# I2P_Final_Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: AIStrategy.cpp.6C33DEEC438152E7.idx  AIStrategy.hpp.DD1943FF8B39008E.idx  AITank.cpp.7AA4C738ED60A72B.idx  AITank.hpp.CA15F54C5F57D21F.idx  Action.hpp.34F6A686A5152483.idx  Allegro5Exception.cpp.6AA85DD803024258.idx  Allegro5Exception.hpp.5CF408D5B9713148.idx  AudioHelper.cpp.3870323B7CB2F5E9.idx  AudioHelper.hpp.CE8FF9EBA099B8ED.idx  Bullet.cpp.45171A227D8929F9.idx  Bullet.hpp.BDCEB560334BE3AB.idx  Coin.cpp.D9D5CAEF89853DC2.idx  Coin.hpp.B62BBD428CAD04EA.idx  Collider.cpp.3F4B856D89485940.idx  Collider.hpp.C73535AADA7F8E11.idx  Explosion.cpp.4FBFA6A49C0F277C.idx  Explosion.hpp.CE70C7527657FBCB.idx  GameEngine.cpp.EFEF4959815B84E0.idx  GameEngine.hpp.7ED48FFEFD0B7CD6.idx  Group.cpp.26A0AF5271061188.idx  Group.hpp.023E6329DDCA8027.idx  HistoryScene.cpp.BD0A29CD7B4E9451.idx  HistoryScene.hpp.952ACC57E69C9A9A.idx  HomeScene.cpp.0D8B651682B82B50.idx  HomeScene.hpp.7953677CFC012305.idx  IControl.cpp.6027A033C9BF9AF5.idx  IControl.hpp.F3114A5BB6CCC8A9.idx  IObject.cpp.54A6821176597311.idx  IObject.hpp.14979F8EC2636B49.idx  IScene.cpp.F38E9DA8A8DDE614.idx  IScene.hpp.F2D96F703C9B2814.idx  Image.cpp.7C7C8204E857C7F2.idx  Image.hpp.B12537B076AF2F14.idx  ImageButton.cpp.0A360AFF2BFF6F58.idx  ImageButton.hpp.97DB4FF9EB97202A.idx  LOG.cpp.3A50ED5C7D84A849.idx  LOG.hpp.0FE93034E8705642.idx  Label.cpp.1A62E341FB70D9FB.idx  Label.hpp.B5F6756D3CC261F5.idx  LandMine.cpp.8BB655AB0F534599.idx  (+17 more)
Engine/: GameEngine.cpp  GameEngine.hpp
Object/: AIStrategy.cpp  AIStrategy.hpp  AITank.cpp  AITank.hpp  Action.hpp  Bullet.cpp  Bullet.hpp  Coin.cpp  Coin.hpp  Explosion.cpp  Explosion.hpp  LandMine.cpp  LandMine.hpp  Tank.cpp  Tank.hpp
Resource/: history.txt
Scene/: HistoryScene.cpp  HistoryScene.hpp  HomeScene.cpp  HomeScene.hpp  PlayScene.cpp  PlayScene.hpp  StageSelectScene.cpp  StageSelectScene.hpp
UI/Component/: Slider.cpp
